examples/type_system/failing/20_direct_builtin_missing_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: direct builtin effect call inside a function with incompatible ambient effects.
//
// `tick` allows only Time, but `print` requires IO.

fn tick() -> Int with Time {
    print("tick")
    1
}

tick()
